--- a/rose-res/data/gui/default/widget/window_default.cfg
+++ b/rose-res/data/gui/default/widget/window_default.cfg
@@ -110,20 +110,20 @@
 				[/column]
 			[/row]
 
-			[row]
+			# [row]
 
-				[column]
+			#	[column]
 
-					[button]
-						id = "click_dismiss"
-						definition = "default"
+			#		[button]
+			#			id = "click_dismiss"
+			#			definition = "default"
 
-						label = "Close"
-					[/button]
+			#			label = "Close"
+			#		[/button]
 
-				[/column]
+			#	[/column]
 
-			[/row]
+			# [/row]
 
 		[/grid]
 
